--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-        id="com.birkoss.samsung-health" version="0.0.`">
+        id="com.birkoss.samsung-health" version="0.0.1">
     <name>SamsungHealth</name>
     <description>Cordova Samsung Health</description>
     <license>Apache 2.0</license>
