--- a/plugin.xml
+++ b/plugin.xml
@@ -13,10 +13,16 @@
     <platform name="android">
         <config-file target="res/xml/config.xml" parent="/*">
           <feature name="SamsungHealth">
-            <param name="android-package" value="com.birkoss.plugin.SamsungHealth"/>
+            <param name="android-package" value="com.birkoss.plugin.SamsungHealth" />
           </feature>
         </config-file>
 
-        <source-file src="src/android/SamsungHealth.java" target-dir="src/com/birkoss/plugin/"/>
+        <config-file target="AndroidManifest.xml" parent="/*">
+          <uses-permission android:name="com.samsung.android.health.permission.read" android:value="com.samsung.health.sleep_stage;com.samsung.health.food_info;com.samsung.health.food_intake;com.samsung.health.uv_exposure;com.samsung.health.weight;com.samsung.health.ambient_temperature;com.samsung.health.body_temperature;com.samsung.health.step_count;com.samsung.health.sleep;com.samsung.health.blood_glucose;com.samsung.health.hba1c;com.samsung.health.oxygen_saturation;com.samsung.health.blood_pressure;com.samsung.health.heart_rate;com.samsung.health.electrocardiogram;com.samsung.health.exercise;com.samsung.health.water_intake;com.samsung.health.caffeine_intake" />
+        </config-file>
+
+        <source-file src="src/android/libs/samsung-health-data-v1.3.0.jar" target-dir="libs/" />
+
+        <source-file src="src/android/SamsungHealth.java" target-dir="src/com/birkoss/plugin/" />
     </platform>
 </plugin>
